--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "gw2-meta-planner",
-	"version": "2.0.0-dev.1",
+	"version": "2.0.0",
 	"description": "List of metas in Guild Wars 2, with ability to put together a custom meta train",
 	"scripts": {
 		"build": "php build.php --assets",
